fixed nav bar on mobile screen

--- a/src/app/layout/app-header/header.component.css
+++ b/src/app/layout/app-header/header.component.css
@@ -1,7 +1,7 @@
 .navbar {
   position: fixed;
   width: 100%;
-  height: 10vh;
+  height: 57px!important;
   margin: 0;
   padding: 0;
   transition: top 0.5s;
@@ -14,6 +14,13 @@
   height: 100%;
   object-fit: cover;
   object-position: 0px -3px;
+}
+
+@media (min-width: 992px) {
+  .logo {
+    position: relative;
+    top: -3px;
+  }
 }
 
 .navbar-brand {
@@ -53,6 +60,10 @@
     background-color: lightgrey;
     border-radius: 20px;
   }
+}
+
+html:not([data-scroll='0']) active-link {
+  color: red!important;
 }
 
 #reservation {
